# knot

./: .gitignore  AGENTS.md  Cargo.toml  README.md  knot.db  rag-skill-test  release.json  test_documents
knot-app/src-tauri/: Cargo.toml  tauri.conf.json
knot-app/src-tauri/capabilities/: default.json
knot-app/src-tauri/icons/: icon.icns
knot-app/src-tauri/src/: eval_api.rs  main.rs
knot-app/src-tauri/src/agents/: mod.rs
knot-app/src-tauri/src/engine/: llm.rs  mod.rs
knot-app/src-tauri/src/models/: config.rs  downloader.rs  manager.rs  mod.rs  queue.rs
knot-app/src-tauri/src/vision/: mod.rs
knot-cli/: Cargo.toml
knot-cli/src/: main.rs
knot-core/: Cargo.toml
knot-core/src/: embedding.rs  entity.rs  index.rs  lib.rs  llm.rs  manager.rs  mock_embedding.rs  monitor.rs  path_processor.rs  registry.rs  store.rs  tokenizer.rs
knot-excel/: Cargo.toml
knot-excel/src/: config.rs  error.rs  lib.rs  pipeline.rs  profile.rs  reader.rs
knot-excel/src/query/: cache.rs  engine.rs  mod.rs  result.rs  sql.rs
knot-excel/tests/: complex_report_test.rs  create_test_files.py  integration_test.rs  multi_block_test.rs  test_complex_report.xlsx  test_multi_block.xlsx  test_type_transition.xlsx  test_with_gaps.xlsx
knot-parser/: Cargo.toml
knot-parser/examples/: test_parse.rs
knot-parser/knot-pdf/: Cargo.toml  MinerU  README.md  knot-pdf.example.toml
knot-parser/knot-pdf/.gemini/artifacts/: m4_implementation_plan.md  m5_implementation_plan.md
knot-parser/knot-pdf/.github/workflows/: ci.yml
knot-parser/knot-pdf/.plans/m7-cli-tool/: m7-cli-tool.md
knot-parser/knot-pdf/.plans/m8-figure-detection/: iteration1.md
knot-parser/knot-pdf/benches/: pipeline_bench.rs
knot-parser/knot-pdf/docs/: architecture.md  layout-model-guide.md  table-model-guide.md
knot-parser/knot-pdf/docs/milestones/: m10-layout-detection.md  m11-table-model-enhancement.md  m13-postprocess-enhancement.md  m14-hybrid-parse-mode.md  m15-benchmark-comparison.md  m3-table-stream-extraction.md  m4-table-ruled-extraction.md  m5-ocr-fallback-store.md  m7-cli-tool.md
knot-parser/knot-pdf/scripts/: gen_eval_samples.py  install_knot_pdf.sh  validate_formula_model.py
knot-parser/knot-pdf/src/: config.rs  lib.rs
knot-parser/knot-pdf/src/backend/: pdf_rs.rs  pdfium.rs  traits.rs
knot-parser/knot-pdf/src/figure/: mod.rs
knot-parser/knot-pdf/src/formula/: onnx_recognize.rs  recognize.rs
knot-parser/knot-pdf/src/hf_detect/: mod.rs
knot-parser/knot-pdf/src/hybrid/: mod.rs  strategy.rs  vlm.rs
knot-parser/knot-pdf/src/ir/: image.rs  mod.rs  page.rs  table.rs  types.rs
knot-parser/knot-pdf/src/layout/: mod.rs  reading_order.rs  xy_cut.rs
knot-parser/knot-pdf/src/ocr/: integration.rs  mock.rs
knot-parser/knot-pdf/src/pipeline/: async_pipeline.rs  mod.rs
knot-parser/knot-pdf/src/postprocess/: chart_text.rs  footnote.rs  list.rs  mod.rs  noise.rs  orphan.rs  watermark.rs
knot-parser/knot-pdf/src/render/: markdown.rs  ocr_render.rs  rag.rs
knot-parser/knot-pdf/src/scoring/: page_score.rs
knot-parser/knot-pdf/src/store/: traits.rs
knot-parser/knot-pdf/src/table/: candidate.rs  enhance.rs  mod.rs  ruled.rs  stream.rs  structure_detect.rs
knot-parser/knot-pdf/src/vision/: openai.rs
knot-parser/knot-pdf/tests/: ir_tests.rs  m10_layout_tests.rs  m11_table_model_tests.rs  m2_tests.rs  m3_tests.rs  m4_tests.rs  m5_tests.rs  m6_async_tests.rs  m6_tests.rs  m7_cli_tests.rs
knot-parser/knot-pdf/tests/fixtures/eval_output/ir_json/: bd01_text_only.pdf.json  bd02_multi_column.pdf.json  bd03_financial_report.pdf.json  bd04_academic_paper.pdf.json  bd05_legal_contract.pdf.json  bd06_invoice.pdf.json  bd07_form_fields.pdf.json  bd08_mixed_lang.pdf.json  bd09_list_heavy.pdf.json  bd10_toc_outline.pdf.json  complex_01_wide.pdf.json  complex_02_tall.pdf.json  complex_03_nested_text.pdf.json  complex_04_sparse.pdf.json  complex_05_no_header.pdf.json  complex_06_mixed_borders.pdf.json  complex_07_tiny.pdf.json  complex_08_adjacent.pdf.json  complex_09_text_between.pdf.json  complex_10_numeric_only.pdf.json  ruled_01.pdf.json  ruled_02.pdf.json  ruled_03.pdf.json  ruled_04.pdf.json  ruled_05.pdf.json  ruled_06.pdf.json  ruled_07.pdf.json  ruled_08.pdf.json  ruled_09.pdf.json  ruled_10.pdf.json  ruled_11.pdf.json  ruled_12.pdf.json  ruled_13.pdf.json  ruled_14.pdf.json  ruled_15.pdf.json  ruled_16.pdf.json  ruled_17.pdf.json  ruled_18.pdf.json  ruled_19.pdf.json  ruled_20.pdf.json  (+25 more)
knot-parser/knot-pdf/tests/fixtures/eval_output/rag_text/: bd01_text_only.pdf.txt  bd02_multi_column.pdf.txt  bd03_financial_report.pdf.txt  bd04_academic_paper.pdf.txt  bd05_legal_contract.pdf.txt  bd06_invoice.pdf.txt  bd07_form_fields.pdf.txt  bd08_mixed_lang.pdf.txt  bd09_list_heavy.pdf.txt  bd10_toc_outline.pdf.txt  complex_01_wide.pdf.txt  complex_02_tall.pdf.txt  complex_03_nested_text.pdf.txt  complex_04_sparse.pdf.txt  complex_05_no_header.pdf.txt  complex_06_mixed_borders.pdf.txt  complex_07_tiny.pdf.txt  ruled_01.pdf.txt  (+47 more)
knot-parser/src/: lib.rs
knot-parser/src/core/: dispatcher.rs  mod.rs  tree_builder.rs
knot-parser/src/formats/: docx.rs  excel.rs  md.rs  mod.rs  pdf.rs
knot-parser/src/vision/: mod.rs
knot-parser/tests/: pdf_integration_test.rs
pageindex-rs/: Cargo.toml
pageindex-rs/examples/: test_parse.rs
pageindex-rs/src/: lib.rs
pageindex-rs/src/core/: dispatcher.rs  tree_builder.rs
pageindex-rs/src/formats/: md.rs  mod.rs  pdf.rs
pageindex-rs/tests/: pdf_integration_test.rs
undoc/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
undoc/.github/workflows/: ci.yml  release.yml
undoc/bindings/csharp/: Undoc.cs
undoc/cli/: Cargo.toml
undoc/cli/src/: main.rs  update.rs
undoc/include/: undoc.h
undoc/src/: container.rs  detect.rs  error.rs  ffi.rs  lib.rs
undoc/src/docx/: mod.rs  numbering.rs  parser.rs  styles.rs
undoc/src/model/: document.rs  mod.rs  paragraph.rs  resource.rs  table.rs
undoc/src/pptx/: mod.rs  parser.rs
undoc/src/render/: cleanup.rs  json.rs  markdown.rs  mod.rs  options.rs  text.rs
undoc/src/xlsx/: mod.rs  parser.rs  shared_strings.rs
(+292 files in other folders)
