[workspace]
members = [
    "knot-app/src-tauri",
    "undoc", "knot-core", "knot-cli",
    "knot-pdf",
    "knot-markdown",
    "knot-parser",
    "knot-excel",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
