[package]
name = "knot-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
knot-core = { path = "../knot-core" }
pageindex-rs = { path = "../pageindex-rs" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
notify = "6.1"

# Embedding 支持
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"] }
tokenizers = "0.21"
async-trait = "0.1"
