[package]
name = "knot-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
knot-core = { path = "../knot-core" }
knot-parser = { path = "../knot-parser" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
notify = "6.1"

# Embedding 支持
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"] }
tokenizers = "0.21"
async-trait = "0.1"

# 下载 & LLM 支持
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
toml = "0.8"
