[package]
name = "knot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
pageindex-rs = { path = "../pageindex-rs", features = ["office"] }
lancedb = "0.10"
arrow-array = "52.0"
arrow-schema = "52.0"
arrow = "52.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
walkdir = "2"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
notify = "6.1"
blake3 = "1.5"
hex = "0.4"
chrono = "0.4"
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokenizers = "0.21"
base64 = "0.21"
tantivy = { version = "0.22", default-features = false, features = ["mmap"] }
jieba-rs = "0.8"
