[package]
name = "knot-excel"
version = "0.1.0"
edition = "2021"
description = "Excel structured data parser for Knot RAG system"

[dependencies]
calamine = "0.26"
duckdb = { version = "1.4", features = ["bundled"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"
