[package]
name = "knot-excel"
version = "0.1.0"
edition = "2021"
description = "Excel structured data parser for Knot RAG system"

[features]
default = []
query = ["duckdb"]

[dependencies]
calamine = "0.26"
# Pin to =1.1.1 to avoid chrono/arrow-arith v52 conflict:
# duckdb >= 1.2 uses arrow v56 which requires chrono >= 0.4.40,
# but lancedb (in workspace) uses arrow-arith v52 which breaks with chrono >= 0.4.40.
# duckdb 1.1.1 uses arrow v53 (chrono < 0.4.40 compatible).
duckdb = { version = "=1.1.1", features = ["bundled"], optional = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"
duckdb = { version = "=1.1.1", features = ["bundled"] }
