[package]
name = "knot-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
pulldown-cmark = "0.10"
undoc = { version = "0.1", path = "../undoc", optional = true }
thiserror = "2.0.18"
async-trait = "0.1.89"
regex = "1.10"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
knot-pdf = { path = "../knot-pdf", features = ["pdfium", "ocr_paddle", "vision", "layout_model", "formula_model"] }
knot-markdown = { path = "../knot-markdown" }
knot-excel = { path = "../knot-excel" }

[features]
default = []
office = ["dep:undoc"]
vision = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
