
[package]
name = "undoc"
version = "0.1.10"
edition = "2021"
authors = ["iyulab"]
description = "High-performance Microsoft Office document extraction to Markdown"
license = "MIT"
repository = "https://github.com/iyulab/undoc"
keywords = ["docx", "xlsx", "pptx", "markdown", "office"]
categories = ["parsing", "text-processing"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["docx", "xlsx", "pptx"]
docx = []
xlsx = []
pptx = []
async = ["tokio"]
ffi = []

[dependencies]
# ZIP handling
zip = "2.2"

# XML parsing
quick-xml = { version = "0.37", features = ["serialize"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Parallelism
rayon = "1.10"

# Text processing
regex = "1.11"
unicode-normalization = "0.1"

# Optional: Async
tokio = { version = "1.42", features = ["rt", "fs"], optional = true }

[dev-dependencies]
tempfile = "3.14"
