[package]
name = "knot-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心：通过路径引用本地库，开启所有特性
pageindex-rs = { path = "../../pageindex-rs", features = ["office", "vision"] }

# 应用层特有的推理引擎依赖
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"] }
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tokio = { workspace = true, features = ["full"] }

# 额外依赖
# 额外依赖
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.21"
ndarray = "0.16"
async-trait = "0.1"
base64 = "0.21"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
